--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = { version = "1.0.44", features = ["std"] }
+
+[profile.release]
+opt-level = 3
